cdp-csdp-matthew-chung-git-source.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdp-csdp-matthew-chung-git-source
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webhooks/csdp/demo
            backend:
              service:
                name: demo-eventsource-svc
                port:
                  number: 80
            pathType: Prefix
      host: lrcsdp.support.cf-cd.com
